# ITA-CBS2

./: .gitignore  CMakeLists.txt  README.md  main_CBSTA.cpp  main_ECBSTA.cpp  main_ITACBS.cpp  main_ITA_ECBS.cpp  main_ITA_ECBS_v0.cpp
include/: common.cpp  common.hpp  dynamic_hungarian_assignment.hpp
include/CBSTA/: CBSTA.cpp  CBSTA.hpp  CBSTANode.cpp  CBSTANode.hpp  TANode.cpp  TANode.hpp
include/ECBSTA/: ECBSTA.cpp  ECBSTA.hpp  ECBSTANode.cpp  ECBSTANode.hpp  TANode.hpp
include/ITACBS/: ITACBS.cpp  ITACBS.hpp  ITACBSNode.cpp  ITACBSNode.hpp
include/ITA_ECBS/: ITA_ECBS.cpp  ITA_ECBS.hpp  ITA_ECBSNode.cpp  ITA_ECBSNode.hpp
include/ITA_ECBS_v0/: ITA_ECBS.cpp  ITA_ECBS.hpp  ITA_ECBSNode.cpp  ITA_ECBSNode.hpp
map_file/: debug_cbs_data.yaml  debug_data.yaml  empty-4-4.map
map_file/4x4_empty/: empty-4-4_agents_10_test_0.yaml  empty-4-4_agents_10_test_1.yaml  empty-4-4_agents_10_test_10.yaml  empty-4-4_agents_10_test_11.yaml  empty-4-4_agents_10_test_12.yaml  empty-4-4_agents_10_test_13.yaml  empty-4-4_agents_10_test_14.yaml  empty-4-4_agents_10_test_15.yaml  empty-4-4_agents_10_test_16.yaml  empty-4-4_agents_10_test_17.yaml  empty-4-4_agents_10_test_18.yaml  empty-4-4_agents_10_test_19.yaml  (+268 more)
python/: baseline2TA.py  compareTYM2TA.py  data_process.py  data_vis.py  generate_data_for_cbs.py  generate_data_for_exp1.py  generate_data_for_exp2.py  generate_test_case.py  visualize.py
run_test/: gen_test_exp1.sh  run_exp1.sh  run_exp2.sh  run_itabcbs_exp1.sh  run_itabcbs_exp2.sh  single_exp1.sh  single_exp1_e.sh  single_exp2.sh  single_exp2_e.sh
(+251 files in other folders)
